# skald

./: Cargo.toml  README.md
skald/: Cargo.toml
skald/src/: core_topics.rs  lib.rs
skald/src/client/: mod.rs
skald/src/handler/: mod.rs
skald/src/messaging/: mod.rs
skald/src/queue/: mod.rs
skald/src/saga/: builder.rs  mod.rs
skald/src/server/: mod.rs
skald/src/transport/: mod.rs  tcp.rs  tls.rs  unix.rs
skald/tests/: distributed_saga_test.rs  durable_execution_test.rs  integration_tests.rs  message_passing_test.rs  mixed_paradigm_test.rs  service_management_test.rs
skald_derive/: Cargo.toml
skald_derive/src/: lib.rs
