[package]
name = "skald"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
tokio-rustls = "0.26.2"
async-trait = "0.1.88"
rustls = "0.23.26"
anyhow = "1.0.86"
rand = "0.9.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_cbor = "0.11.2"
serde-error = "0.1.2"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
skald_derive = { path = "../skald_derive" }

[dev-dependencies]
tokio = { version = "1.44.2", features = ["full", "test-util"] }
